--- a/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Admin/usersList.html.twig
@@ -94,7 +94,7 @@
                             {% endif %}
                             {% if user.artist is defined or user.role_name == 'Client' %}
                                 {% if user.active == false and user.fake == false %}
-                                    <button type="button" class="btn btn-success tokenResendUser" >Resent token</button>
+                                    <button type="button" class="btn btn-success tokenResendUser" >Resend token</button>
                                 {% endif %}
                             {% endif %}
 
