--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -156,7 +156,7 @@
                 </div>
             </div>
 
-            <article class="item clearfix {% if performances|length > 0 %}hidden{% endif %} newPerformanceBlank">
+            <article class="item clearfix hidden newPerformanceBlank">
 
                 <form class="edit-form" id="NewBlank">
                     <header class="heading">
