--- a/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Profile/ordersSectionEdit.html.twig
@@ -133,7 +133,7 @@
                         </div>
                         <ul class="options-list">
                             <li>
-                                <button class="btn-option perfEditViewToggle edit" type="button"><i class="ico"></i></button>
+                                <button class="btn-option perfEditViewToggle edit" data-origin-title="{{performance.title}}" type="button"><i class="ico"></i></button>
                             </li>
                             <li>
                                 <button class="btn-option deleteOfferBtn remove" type="button"><i class="ico"></i></button>
