--- a/src/Acted/LegalDocsBundle/Resources/public/css/agenda.css
+++ b/src/Acted/LegalDocsBundle/Resources/public/css/agenda.css
@@ -18,7 +18,7 @@
     width: 30%;
     border: 2px solid #90bddf;
     margin: 0 0 10px 5%;
-    height: 282px;
+    height: 220px;
 }
 .agenda .remind > li.orange{border-color: #ff773c;}
 .agenda .remind > li.orange h2{background: #ff773c;}
@@ -26,13 +26,16 @@
     margin-left: 0;
 }
 .agenda .remind h2{
-    font-size: 16px;
+    font-size: 14px;
     color: #fff;
-    padding: 5px 10px 7px;
+    padding: 3px 10px 5px;
     margin: 0;
     background: #90bddf;
 }
-.agenda .remind .list{padding-top: 6px;}
+.agenda .remind .list{
+    padding-top: 6px;
+    font-size: 12px;
+}
 .agenda .remind .list li{
     position: relative;
     padding: 0 10px 4px;
@@ -41,11 +44,12 @@
 .agenda .calendar{
     position: relative;
     text-align: center;
-    padding: 40px 0 0;
+    padding: 20px 0 0;
 }
 .calendar .bx-viewport{
     border: none;
     box-shadow: none;
+    padding: 0 2px 0 3px;
     margin: 0;
     left: 0;
 }
@@ -76,8 +80,8 @@
     vertical-align: middle;
 }
 .calendar .date{
-    margin: 0 27px;
-    font-size: 20px;
+    margin: 0 22px;
+    font-size: 16px;
     color: #000;
 }
 .calendar .btn-prev,
@@ -109,12 +113,12 @@
 .calendar .add{
     border: none;
     background: none;
-    font-size: 15px;
+    font-size: 14px;
     color: #000;
     color: rgba(0, 0, 0, .87);
     padding: 0 0 0 15px;
     float: left;
-    margin: 7px 0 0 -85px;
+    margin: 3px 0 0 -85px;
     position: relative;
     outline: none;
     z-index: 1;
@@ -124,21 +128,10 @@
     left: -8px;
     top: 0;
     background: url("../../assets/images/add-entry.png") no-repeat;
-    width: 22px;
-    height: 22px;
+    background-size: cover;
+    width: 20px;
+    height: 20px;
     content: "";
-}
-.calendar .add:active:after{
-    -webkit-transition: -webkit-transform .25s;
-    -moz-transition: -moz-transform .25s;
-    -ms-transition: -ms-transform .25s;
-    -o-transition: -o-transform .25s;
-    transition: transform .25s;
-    -webkit-transform: rotate(360deg);
-    -moz-transform: rotate(360deg);
-    -ms-transform: rotate(360deg);
-    -o-transform: rotate(360deg);
-    transform: rotate(360deg);
 }
 .calendar .add .fa{
     margin-left: -15px;
@@ -157,8 +150,8 @@
 .month-table th{
     text-align: center;
     color: #fff;
-    height: 50px;
-    font-size: 18px;
+    height:30px;
+    font-size: 14px;
     font-weight: normal;
     width: 160px;
 }
@@ -168,10 +161,10 @@
     text-align: left;
 }
 .month-table tbody tr:first-child{border: none;}
-.month-table tbody tr:last-child td{height: 125px;}
+.month-table tbody tr:last-child td{height: 115px;}
 .month-table td{
     padding: 0;
-    height: 120px;
+    height: 110px;
     vertical-align: top;
     border-left: 2px solid #90bddf;
     border-color: rgba(144, 189, 223, .3);
@@ -186,9 +179,9 @@
     background: rgba(162, 198, 231, .3);
     color: #000;
     display: block;
-    font-size: 16px;
+    font-size: 12px;
     text-align: right;
-    padding: 1px 20px 2px;
+    padding: 1px 12px 2px;
 }
 .month-table .not-current .number{
     background: none;
@@ -203,7 +196,7 @@
     position: relative;
     color: #000;
     color: rgba(0, 0, 0, .87);
-    font-size: 13px;
+    font-size: 12px;
     display: block;
     min-height: 18px;
     cursor: pointer;
@@ -219,7 +212,6 @@
     white-space: nowrap;
     text-overflow: ellipsis;
     height: 100%;
-    width: 100%;
 }
 .month-table .note span{position: relative;}
 .month-table .note span:before{content: "- ";}
@@ -340,36 +332,39 @@
     margin: 0;
     padding: 0;
 }
-.modal.add-entry .controls .btn{
-    background: none;
-    color: #fff;
-}
 .modal.add-entry .controls .btn:active{
     background: rgba(255, 255, 255, 0.7);
     color: rgba(75, 75, 75, 0.64);
 }
+.modal.add-entry .controls .btn{
+    padding-top: 4px;
+    background: none;
+    color: #fff;
+}
 .modal.add-entry .modal-content .close {
     position: absolute;
-    height: 38px;
-    width: 38px;
-    top: -19px;
-    right: -19px;
+    height: 28px;
+    width: 28px;
+    top: -10px;
+    right: -10px;
     border-radius: 50%;
     background: #F2F2F2;
     opacity: 1;
-    font-size: 28px;
+    font-size: 22px;
     outline: none !important;
     z-index: 1;
 }
 .modal.add-entry .modal-content .close > span {
-    color: #959595;
+    background: url('../../assets/images/close.png') no-repeat;
+    height: 12px;
+    margin: -6px 0 0 -6px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 12px;
 }
 /*modal add entry styles end*/
 /*media styles start*/
-@media (max-width: 991px){
-    .agenda .remind h2{font-size: 14px;}
-    .agenda .remind .list{font-size: 12px;}
-}
 @media (max-width: 767px){
     .agenda > .container{padding: 0;}
     .agenda .remind li{
@@ -383,7 +378,7 @@
     .agenda .remind li.open .list{display: block;}
     .agenda .remind .list li{
         margin: 0 0 5px;
-        padding-bottom: 3px;
+        padding-bottom: 1px;
     }
     .agenda .calendar{padding-top: 10px;}
     .calendar .bxslider li{
@@ -403,8 +398,7 @@
         padding: 1px 5px 2px;
     }
     .month-table td:first-child{border-left: none;}
-    .month-table th{height: 40px;}
-    .month-table tbody tr:last-child td{height: 85px;}
+    .month-table th{height: 30px;}
     .modal.add-entry .modal-content .close{
         background: none;
         top: 0;
@@ -419,23 +413,19 @@
         -o-transform: translate(0,0);
         transform: translate(0,0);
     }
-    .calendar .holder{margin: 0 0 5px;}
-    .calendar .date{
-        font-size: 15px;
-        margin: 0 13px;
-    }
-    .calendar .slider-controls{padding: 0 27px;}
+    .calendar .holder{margin-bottom: 8px;}
     .calendar .add{
         text-indent: -9999px;
         overflow: hidden;
         padding: 0;
-        margin-top: 1px;
+        margin-top: 3px;
         margin-left: -38px;
     }
     .calendar .add:after{
         left: auto;
         right: 0;
     }
+    .month-table tbody tr:last-child td{height: 80px;}
     .calendar .slider-controls{padding: 0 30px;}
     .calendar .date{margin: 0 15px;}
 }
