--- a/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/quoteModal.html.twig
@@ -95,9 +95,11 @@
                             <span class="errorCat"></span>
                         </div>
 
+                        <div class="map-holder pull-right">
+                            <div class="map" id="map"></div>
+                            <em class="note">Pin your location on the map</em>
+                        </div>
                     </div>
-
-
                 </div>
             </form>
             <form id="quoteRequestSecond">
