--- a/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
+++ b/src/Acted/LegalDocsBundle/Resources/views/Default/footer.html.twig
@@ -68,5 +68,6 @@
             {% include 'ActedLegalDocsBundle:Default:registration.html.twig' %}
         {% endif %}
 <script src="{{ asset('js/javascript.js') }}"></script>
+<script src="http://maps.google.com/maps/api/js?sensor=false"></script>
 </body>
 </html>
